correction image src

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="col">
         <ul class="col_nextWeather">
           <li class="dayOfWeek">Sun</li>
-          <img src="/images/cloudy-day.png" width="40">
+          <img src="images/cloudy-day.png" width="40">
           <li class="max">26°</li>
           <li class="min">17°</li>
         </ul>
@@ -71,7 +71,7 @@
       <div class="col">
         <ul class="col_nextWeather">
           <li class="dayOfWeek">Sat</li>
-          <img src="/images/stormy.png" width="40">
+          <img src="images/stormy.png" width="40">
           <li class="max">23°</li>
           <li class="min">21°</li>
         </ul>
@@ -79,7 +79,7 @@
       <div class="col">
         <ul class="col_nextWeather">
           <li class="dayOfWeek">Sun</li>
-          <img src="/images/sunny.png" width="40">
+          <img src="images/sunny.png" width="40">
           <li class="max">24°</li>
           <li class="min">17°</li>
         </ul>
@@ -87,7 +87,7 @@
       <div class="col">
         <ul class="col_nextWeather">
           <li class="dayOfWeek">Mon</li>
-          <img src="/images/downpour.png" width="40">
+          <img src="images/downpour.png" width="40">
           <li class="max">29°</li>
           <li class="min">20°</li>
         </ul>
@@ -95,7 +95,7 @@
       <div class="col">
         <ul class="col_nextWeather">
           <li class="dayOfWeek">Tue</li>
-          <img src="/images/rainy.png" width="40">
+          <img src="images/rainy.png" width="40">
           <li class="max">31°</li>
           <li class="min">19°</li>
         </ul>
