correction image src

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="col">
         <ul class="col_nextWeather">
           <li class="dayOfWeek">Mon</li>
-          <img src="images/downpour.png" width="40">
+          <img src="./images/downpour.png" width="40">
           <li class="max">29°</li>
           <li class="min">20°</li>
         </ul>
@@ -95,7 +95,7 @@
       <div class="col">
         <ul class="col_nextWeather">
           <li class="dayOfWeek">Tue</li>
-          <img src="images/rainy.png" width="40">
+          <img src="./images/rainy.png" width="40">
           <li class="max">31°</li>
           <li class="min">19°</li>
         </ul>
