--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
       </div>
     </div>
   </div>
+  <div class="container container-site">
+  <p><a href="https://github.com/Daria-Sazon/weather-app" target="_blank">Open source-code</a> by Daria Sazon</p>
+</div>
   <script src="./src/script.js"></script>
 </body>
 
