added unit conversion

--- a/index.html
+++ b/index.html
@@ -50,11 +50,14 @@
 
       </div>
       <div class="col">
-        <h2 class="currentTemp"><span id="currentTemp">21</span><small class="units">°C</small></h2>
+        <h2 class="currentTemp"><span id="currentTemp"></span><a link="#" id="celsius-link"
+            class="units units-hover"> °C</a><span class="units"> |</span><a href="#" id="fahrenheit-link"
+            class="units units-hover"> °F</a></h2>
         <ul class="weatherDescription">
-          <li><img src="./images/thermometer.png" width="22px" /> Feels like: <span id="feels-like">20</span><small class="units-feels">°C</small></li>
-          <li><img src="./images/humidity.png" width="22px" /> Humidity: <span id="humidity">80</span>%</li>
-          <li><img src="./images/windy.png" width="22px" /> Wind: <span id="wind">5</span> mps</li>
+          <li><img src="./images/thermometer.png" width="22px" /> Feels like: <span id="feels-like"></span><small
+              class="units-feels"> °C</small></li>
+          <li><img src="./images/humidity.png" width="22px" /> Humidity: <span id="humidity"></span>%</li>
+          <li><img src="./images/windy.png" width="22px" /> Wind: <span id="wind"></span> mps</li>
         </ul>
       </div>
     </div>
